// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartTrialModalContent Rendering test that adding a source query param updates the button text 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          height="25"
          viewBox="0 0 32 32"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
            fill="url(#ce-main_svg__a)"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__a"
              x1="5.821"
              x2="19.271"
              y1="4.393"
              y2="33.469"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        continue
      </span>
    </button>
  </div>
</div>
`;

exports[`StartTrialModalContent Rendering test that the warning container renders 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          height="25"
          viewBox="0 0 32 32"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
            fill="url(#ce-main_svg__a)"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__a"
              x1="5.821"
              x2="19.271"
              y1="4.393"
              y2="33.469"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.startTrial
      </span>
    </button>
  </div>
</div>
`;

exports[`StartTrialModalContent Rendering that the content renders 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          height="25"
          viewBox="0 0 32 32"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
            fill="url(#ce-main_svg__a)"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__a"
              x1="5.821"
              x2="19.271"
              y1="4.393"
              y2="33.469"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.startTrial
      </span>
    </button>
  </div>
</div>
`;
